--- a/index.html
+++ b/index.html
@@ -89,11 +89,7 @@
       <div class="card card--8">
         <h2>Write your content using AI.</h2>
         <figure>
-          <img
-            src="assets/images/illustration-ai-content.webp"
-            alt=""
-            srcset=""
-          />
+          <img src="assets/images/illustration-ai-content.webp" alt="Ai" />
         </figure>
       </div>
     </main>
